                     CHANGES version 5.27.2

           This file summarizes changes made since 5.0

Version 5.27.2

Fixed: Issue #931: The "if does exist" test with unmonitor or stop action didn't work properly.


Version 5.27.1

Fixed: Issue #932: AssertException in "check program" if program does not exist. At the same
time this fix also require that executables mentioned in start/stop/restart/exec and check
program exist in the file system. Previously this only generated a warning.

Fixed: Issue #916: Linux: If monit 5.27.0 runs as non-root user, the promatch fails to find processes that belong to
other users and some statistics, such as memory usage, can show 0. Thanks to Lutz Mader for fix.

Fixed: Linux: If monit 5.27.0 runs as non-root user, it required the CAP_SYS_RESOURCE capability to be able to monitor
filedescriptors usage of other processes. Thanks to Christian Goettsche for report.

Fixed: Issue #920: AIX, NetBSD, Solaris: Monit 5.27.0 logs "Cannot test filesdescriptors usage as the statistics is not available on this system"
every cycle even if no filedescriptors test was set in monit configuration.

Fixed: Issue #926: Linux: The process-match based check had extra trailing space.

Fixed: Issue #928: Fixed race condition in HTTP interface reload on fast consecutive SIGHUP. Thanks to Andy Spitzer for patch.

Fixed: Improve the cross-compilation support. Thanks to Christian Goettsche and Helmut Grohne for patch.

Fixed: Monit may crash when sending heartbeat to M/Monit.

Fixed: If the certificate verification failed and valid days test is enabled, monit may report following false positive error:
        certificate expiry in 0 days matches check limit

Changed: log file timestamp now uses ISO 8601 format


Version 5.27.0

Important: (Backward compatibility impact) The SSL "version: auto" now defaults to TLSv1.2 and TLSv1.3 only.
If you need to enable TLSv1.0 or TLSv1.1 (regardless of how insecure it is), you have to explicitly enable it